--- a/software/line-sensor/prj-test-client-stm32l496ze/main-line-sensor-test-client-stm32l496ze.vcxproj.filters
+++ b/software/line-sensor/prj-test-client-stm32l496ze/main-line-sensor-test-client-stm32l496ze.vcxproj.filters
@@ -2,17 +2,17 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="VisualGDB settings">
-      <UniqueIdentifier>{afab34cd-5c2d-4775-9c23-b8f9bc95c1e5}</UniqueIdentifier>
+      <UniqueIdentifier>{c8435c81-3c16-4ca4-9907-73fc7d2e959f}</UniqueIdentifier>
     </Filter>
     <Filter Include="src">
-      <UniqueIdentifier>{9040323a-fbcd-424e-90b6-cd9e764f016f}</UniqueIdentifier>
+      <UniqueIdentifier>{e32e2da6-3681-49a4-a020-8a9b7a8fb619}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="test-utils-Debug.vgdbsettings">
+    <None Include="main-line-sensor-test-client-stm32l496ze-Debug.vgdbsettings">
       <Filter>VisualGDB settings</Filter>
     </None>
-    <None Include="test-utils-Release.vgdbsettings">
+    <None Include="main-line-sensor-test-client-stm32l496ze-Release.vgdbsettings">
       <Filter>VisualGDB settings</Filter>
     </None>
     <None Include="stm32.xml">
@@ -20,16 +20,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src-test\main.c">
+    <ClCompile Include="..\src-test-client\main.c">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src-test\rolling_values_test.c">
-      <Filter>src</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\src-test\rolling_values_test.h">
-      <Filter>src</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
