--- a/software/common/lib-det-os/prj-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/prj-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{2C740AC9-C988-4102-AF56-78DA516B963B}</ProjectGuid>
+    <ProjectGuid>{8D721BB8-9200-41CC-9EEE-BC5125E89409}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
     <BSP_VERSION>2018.12R2</BSP_VERSION>
     <InPlaceBSPSubdir />
@@ -34,46 +34,63 @@
     <GNUConfigurationType>Debug</GNUConfigurationType>
     <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
     <ToolchainVersion>7.2.0/8.0.1/r3</ToolchainVersion>
+    <GNUTargetType>StaticLibrary</GNUTargetType>
+    <ExportedPreprocessorDefinitions>
+    </ExportedPreprocessorDefinitions>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
-    <ToolchainID>c2599f8d-f601-4e3d-9041-1d5828a28edd</ToolchainID>
-    <ToolchainVersion>7.3.1/(GNU/r0</ToolchainVersion>
+    <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
+    <ToolchainVersion>7.2.0/8.0.1/r3</ToolchainVersion>
+    <GNUTargetType>StaticLibrary</GNUTargetType>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
-      <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-robot\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <CLanguageStandard>GNU11</CLanguageStandard>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\inc;$(SolutionDir)\common\lib-stm32l4;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>MAX_SCHEDULED_TASKS=8;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <InlineFunctions>true</InlineFunctions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
-      <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-robot\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <CLanguageStandard>GNU11</CLanguageStandard>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\inc;$(SolutionDir)\common\lib-stm32l4;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>MAX_SCHEDULED_TASKS=8;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <InlineFunctions>true</InlineFunctions>
     </ClCompile>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClInclude Include="..\inc\det_os.h" />
+    <ClInclude Include="..\inc\det_os_implementation.h" />
+    <ClInclude Include="..\inc\result_codes.h" />
+    <ClInclude Include="..\src\global_data.h" />
+    <ClInclude Include="..\src\schedule_tasks.h" />
+    <ClInclude Include="..\src\schedule_tasks_defs.h" />
+    <ClInclude Include="..\src\svc_defs.h" />
+    <ClInclude Include="..\src\types.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="controller-motors-sensors-stm32l496ze-Debug.vgdbsettings" />
-    <None Include="controller-motors-sensors-stm32l496ze-Release.vgdbsettings" />
+    <None Include="lib-det-os-stm32l496ze-Debug.vgdbsettings" />
+    <None Include="lib-det-os-stm32l496ze-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\common\lib-stm32l4\lib-stm32l4.vcxproj">
+    <ClCompile Include="..\src-asm\det_os_idle.S" />
+    <ClCompile Include="..\src-asm\execute_tasks.S" />
+    <ClCompile Include="..\src-asm\schedule_task_svc.S" />
+    <ClCompile Include="..\src-asm\stark_new_task.S" />
+    <ClCompile Include="..\src-asm\svc_handler.S" />
+    <ClCompile Include="..\src-asm\tim2_irq_handler.S" />
+    <ClCompile Include="..\src\det_os_implementation.c" />
+    <ClCompile Include="..\src\global_data.c" />
+    <ClCompile Include="..\src\schedule_tasks.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\lib-stm32l4\prj-stm32l496ze\lib-stm32l496ze.vcxproj">
       <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-driver-stm32l496ze\lib-driver-stm32l496ze.vcxproj">
-      <Project>{388f4433-00a8-4f05-9375-18a1ce980fbe}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-driver\lib-driver.vcxproj">
-      <Project>{dbeba908-c4b2-43fb-833b-aa39c9f860be}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-robot\lib-robot.vcxproj">
-      <Project>{bd706e3d-9b25-4b82-b1a1-e9391f2ca4ef}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
-      <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
     </ProjectReference>
   </ItemGroup>
 </Project>
