--- a/software/controller-motors-sensors/prj-stm32l496ze/main-controller-motors-sensors-stm32l496ze.vcxproj
+++ b/software/controller-motors-sensors/prj-stm32l496ze/main-controller-motors-sensors-stm32l496ze.vcxproj
@@ -102,4 +102,15 @@
     <ClCompile Include="..\src\clock.c" />
     <ClCompile Include="..\src\main.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\common\lib-det-os\prj-stm32l496ze\lib-det-os-stm32l496ze.vcxproj">
+      <Project>{8d721bb8-9200-41cc-9eee-bc5125e89409}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\lib-stm32l4\prj-stm32l496ze\lib-stm32l496ze.vcxproj">
+      <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\lib-utils\prj-stm32l496ze\lib-utils-stm32l496ze.vcxproj">
+      <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
