--- a/software/common/lib-det-os/prj-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/prj-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
@@ -83,7 +83,7 @@
     <ClCompile Include="..\src-asm\schedule_task_svc.S" />
     <ClCompile Include="..\src-asm\stark_new_task.S" />
     <ClCompile Include="..\src-asm\svc_handler.S" />
-    <ClCompile Include="..\src-asm\tim2_irq_handler.S" />
+    <ClCompile Include="..\src-asm\pendsv_handler.S" />
     <ClCompile Include="..\src\det_os_implementation.c" />
     <ClCompile Include="..\src\global_data.c" />
     <ClCompile Include="..\src\schedule_tasks.c" />
