--- a/software/common/lib-det-os/prj-example-stm32l496ze/main-det-os-example-stm32l496ze.vcxproj.filters
+++ b/software/common/lib-det-os/prj-example-stm32l496ze/main-det-os-example-stm32l496ze.vcxproj.filters
@@ -20,7 +20,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\main.c">
+    <ClCompile Include="..\src-example\main.c">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
